refactor: network adapter cleanup (#6)
* small refactoring

* wip

* build: remove environment

* refactor serializer